AWS/02-fortigate.tf
##############################################################################################################
#
# Fortinet
# Infrastructure As Code Demo
# GitHub Actions - Terraform Cloud
# Platform: AWS
#
##############################################################################################################
#
# Deployment of the FortiGate Next-generation Firewall
#
##############################################################################################################

resource "aws_network_interface" "eth0" {
  description = "fgtvm-port1"
  subnet_id   = aws_subnet.publicsubnetaz1.id
}

resource "aws_network_interface" "eth1" {
  description       = "fgtvm-port2"
  subnet_id         = aws_subnet.privatesubnetaz1.id
  source_dest_check = false
}


resource "aws_network_interface_sg_attachment" "publicattachment" {
  depends_on           = [aws_network_interface.eth0]
  security_group_id    = aws_security_group.public_allow.id
  network_interface_id = aws_network_interface.eth0.id
}

resource "aws_network_interface_sg_attachment" "internalattachment" {
  depends_on           = [aws_network_interface.eth1]
  security_group_id    = aws_security_group.allow_all.id
  network_interface_id = aws_network_interface.eth1.id
}


resource "aws_instance" "fgtvm" {
  ami               = var.FGT_LICENSE_TYPE == "byol" ? var.fgtvmbyolami[var.REGION] : var.fgtvmami[var.REGION]
  instance_type     = var.size
  availability_zone = local.az1
  key_name          = var.KEY_PAIR
  user_data         = data.template_file.fgt_custom_data.rendered

  root_block_device {
    volume_type = "standard"
    volume_size = "2"
  }

  ebs_block_device {
    device_name = "/dev/sdb"
    volume_size = "30"
    volume_type = "standard"
  }

  network_interface {
    network_interface_id = aws_network_interface.eth0.id
    device_index         = 0
  }

  network_interface {
    network_interface_id = aws_network_interface.eth1.id
    device_index         = 1
  }

  tags = var.fortinet_tags
}


data "template_file" "fgt_custom_data" {
  template = file("${var.bootstrap-fgtvm}")
  vars = {
    type             = "${var.FGT_LICENSE_TYPE}"
    fgt_license_file = "${var.FGT_BYOL_LICENSE_FILE}"
    adminsport       = "${var.adminsport}"
  }
}

data "aws_network_interface" "eth0" {
  id = "aws_network_interface.eth0.id"
}

data "aws_network_interface" "eth1" {
  id = "aws_network_interface.eth1.id"
}
